ipc/ipdl/test/ipdl/error/trans_WrongName.ipdl
protocol trans_WrongName {

child:
    Msg();
    delete();

state S1:
    call Msg goto S1;
    send delete();
};
